--- a/init.ipynb
+++ b/init.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,6 +58,7 @@
     "import torch\n",
     "from torch_geometric.nn import GCNConv\n",
     "import torch.nn.functional as F\n",
+    "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
     "# from pymongo import MongoClient"
    ]
   },
@@ -1436,13 +1437,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40484\n"
+     ]
+    }
+   ],
    "source": [
     "############# RUNNING BASELINE RECOMMENDERS ###############\n",
     "\n",
-    "###### POSITIVE USER_CONTRACT INTRACTIONS #########\n",
     "data = pd.read_parquet('dataset/user_contract_rating.parquet')\n",
     "###### DATA PREPROCESSING #######\n",
     "def apply_rating_scale(rating):\n",
@@ -1458,58 +1466,27 @@
     "        return 5\n",
     "data['rating'] = data['rating'].apply(apply_rating_scale)\n",
     "\n",
-    "###### COMBINED USER_CONTRACT INTRACTIONS #########\n",
-    "# all_user_ids = data['user'].unique()\n",
-    "# all_item_ids = data['item'].unique()\n",
-    "# all_pairs = pd.MultiIndex.from_product([all_user_ids, all_item_ids], names=['user', 'item']).to_frame(index=False)\n",
-    "# positive_pairs = data.drop('rating', axis=1)\n",
-    "# negative_pairs = all_pairs.merge(positive_pairs, on=['user', 'item'], how='left', indicator=True).query('_merge == \"left_only\"').drop('_merge', axis=1)\n",
-    "# negative_pairs['rating'] = 0\n",
-    "# data_combined = pd.concat([data, negative_pairs], axis=0)\n",
-    "# data_combined.to_parquet('dataset/user_contract_rating_combined_binary.parquet')\n",
-    "\n",
     "################# PRECISION & RECALL EVAL ######################\n",
     "def precision_recall_at_k(predictions, k, threshold):\n",
     "    '''Return precision and recall at k metrics for each user.'''\n",
     "    precisions = dict()\n",
     "    recalls = dict()\n",
     "    user_est_true = defaultdict(list)\n",
-    "    \n",
+    "\n",
     "    for uid, _, true_r, est, _ in predictions:\n",
     "        user_est_true[uid].append((est, true_r))\n",
     "\n",
     "    for uid, user_ratings in user_est_true.items():\n",
     "        user_ratings.sort(key=lambda x: x[0], reverse=True)\n",
-    "        n_rel = sum((true_r >= threshold) for (_, true_r) in user_ratings) # Number of relevant items\n",
-    "        n_rec_k = sum((est >= threshold) for (est, _) in user_ratings[:k]) # Number of recommended items in top k\n",
+    "        n_rel = sum((true_r >= threshold) for (_, true_r) in user_ratings) \n",
+    "        n_rec_k = sum((est >= threshold) for (est, _) in user_ratings[:k]) \n",
     "        n_rel_and_rec_k = sum(((true_r >= threshold) and (est >= threshold))\n",
     "                              for (est, true_r) in user_ratings[:k])\n",
-    "        precisions[uid] = n_rel_and_rec_k / n_rec_k if n_rec_k != 0 else 0 # Precision@K: Proportion of recommended items that are relevant\n",
-    "        recalls[uid] = n_rel_and_rec_k / n_rel if n_rel != 0 else 0 # Recall@K: Proportion of relevant items that are recommended\n",
+    "        precisions[uid] = n_rel_and_rec_k / n_rec_k if n_rec_k != 0 else 0\n",
+    "        recalls[uid] = n_rel_and_rec_k / n_rel if n_rel != 0 else 0 \n",
     "\n",
     "    return precisions, recalls, k\n",
     "\n",
-    "################# MAP@K EVAL ######################\n",
-    "# def precision_at_k(predictions, k=5, threshold=40):\n",
-    "#     '''Return precision at k using Surprise predictions'''\n",
-    "    \n",
-    "#     user_est_true = {}\n",
-    "#     for uid, _, true_r, est, _ in predictions:\n",
-    "#         current = user_est_true.get(uid, [])\n",
-    "#         current.append((est, true_r))\n",
-    "#         user_est_true[uid] = current\n",
-    "\n",
-    "#     precisions = dict()\n",
-    "#     for uid, user_ratings in user_est_true.items():\n",
-    "#         user_ratings.sort(key=lambda x: x[0], reverse=True)\n",
-    "#         n_rel = sum((true_r >= threshold) for (_, true_r) in user_ratings)\n",
-    "#         n_rec_k = sum((est >= threshold) for (est, _) in user_ratings[:k])\n",
-    "#         n_rel_and_rec_k = sum(((true_r >= threshold) and (est >= threshold))\n",
-    "#                               for (est, true_r) in user_ratings[:k])\n",
-    "        \n",
-    "#         precisions[uid] = n_rel_and_rec_k / n_rec_k if n_rec_k != 0 else 1\n",
-    "#     return sum(prec for prec in precisions.values()) / len(precisions)\n",
-    "# print(f'Precision@k: {precision_at_k(predictions, k=10)}')\n",
     "\n",
     "################# AUTO-EVAL SVD CF #####################\n",
     "# algo = SVD()\n",
@@ -1524,49 +1501,123 @@
     "# algo = KNNBasic(sim_options=sim_options)\n",
     "# cross_validate(algo, data, measures=['RMSE', 'MAE'], cv=5, verbose=True)\n",
     "\n",
-    "############# CF RECOMMENDER ###############\n",
-    "# reader = Reader(rating_scale=(1,5))\n",
-    "# data = Dataset.load_from_df(data[['user', 'item', 'rating']], reader)\n",
-    "# # data = Dataset.load_builtin('ml-100k')\n",
-    "# trainset, testset = train_test_split(data, test_size=0.2)\n",
-    "# model = SVD()\n",
-    "# model.fit(trainset)\n",
-    "# predictions = model.test(testset)\n",
-    "\n",
-    "# precisions, recalls, k = precision_recall_at_k(predictions, k=5, threshold=1)\n",
-    "# print(f'CF Precision@{k}: {sum(prec for prec in precisions.values()) / len(precisions)}')\n",
-    "# print(f'CF Recall@{k}: {sum(rec for rec in recalls.values()) / len(recalls)}')\n",
-    "\n",
-    "\n",
-    "############# POPULARITY_BASED RECOMMENDER ###############\n",
-    "# average_rating = data.groupby('item')['rating'].sum()\n",
-    "# top_k_items = average_rating.nlargest(5).index.tolist()\n",
-    "# testset = data[:0.2 * len(data)]\n",
-    "# popularity_predictions = [(uid, iid, true_r, (average_rating[iid] if iid in average_rating else 0), '')\n",
-    "#                           for uid, iid, true_r in testset]\n",
-    "# precisions, recalls, k = precision_recall_at_k(popularity_predictions, k=5, threshold=1)\n",
-    "# print(f'Popularity Precision@{k}: {sum(prec for prec in precisions.values()) / len(precisions)}')\n",
-    "# print(f'Popularity Recall@{k}: {sum(rec for rec in recalls.values()) / len(recalls)}')\n",
-    "\n",
-    "k = 10\n",
-    "top_k_global = data.groupby('item')['rating'].sum().sort_values(ascending=False).head(k).index.tolist()\n",
-    "precisions = []\n",
-    "recalls = []\n",
-    "for user in data['user'].unique():\n",
-    "    user_top_k = data[data['user'] == user].sort_values(by='rating', ascending=False).head(k)['item'].tolist()\n",
-    "    common_items = len(set(user_top_k).intersection(set(top_k_global)))\n",
+    "#################### CF RECOMMENDER #######################\n",
+    "'''The average percision just tell us how relevant our recommendations are, \n",
+    "    but dosn't tell us how good our ranking is\n",
+    "'''\n",
+    "def MAP_at_K_MF_batch(model=None, data=None, K=None, batch_size=100):\n",
+    "    total_map = 0.0\n",
+    "    count_users = 0\n",
     "    \n",
-    "    precision = common_items / k\n",
-    "    recall = common_items / len(user_top_k)\n",
+    "    user_ids = [uid for uid, _, _ in data]\n",
+    "    unique_user_ids = list(set(user_ids))\n",
     "    \n",
-    "    precisions.append(precision)\n",
-    "    recalls.append(recall)\n",
+    "    # Divide unique_user_ids into batches\n",
+    "    batches = [unique_user_ids[i:i + batch_size] for i in range(0, len(unique_user_ids), batch_size)]\n",
+    "    \n",
+    "    def process_batch(batch):\n",
+    "        nonlocal total_map, count_users\n",
+    "        item_ids = [iid for _, iid, _ in data]\n",
+    "        \n",
+    "        batch_map = 0.0\n",
+    "        batch_count = 0\n",
+    "        \n",
+    "        for uid in batch:\n",
+    "            true_relevant = [iid for (u, iid, r) in data if u == uid]\n",
+    "            if len(true_relevant) == 0:\n",
+    "                continue\n",
+    "            \n",
+    "            predicted_items = get_prediction(K, uid, item_ids, model)\n",
+    "            hits = 0\n",
+    "            sum_precisions = 0.0\n",
+    "            \n",
+    "            for k in range(1, K + 1):\n",
+    "                item_at_k = predicted_items[k - 1]\n",
+    "                if item_at_k in true_relevant:\n",
+    "                    hits += 1\n",
+    "                    precision_at_k = hits / k\n",
+    "                    sum_precisions += precision_at_k\n",
+    "                    \n",
+    "            average_precision = sum_precisions / min(len(true_relevant), K)\n",
+    "            batch_map += average_precision\n",
+    "            batch_count += 1\n",
+    "            \n",
+    "        return batch_map, batch_count\n",
+    "    \n",
+    "    def get_prediction(K, uid, item_ids, model):\n",
+    "        predicted_scores = [model.predict(uid, iid).est for iid in item_ids]\n",
+    "        top_k_indices = np.argsort(predicted_scores)[::-1][:K]\n",
+    "        results = [item_ids[i] for i in top_k_indices]\n",
+    "        return results\n",
     "\n",
-    "avg_precision = sum(precisions) / len(precisions)\n",
-    "avg_recall = sum(recalls) / len(recalls)\n",
+    "    with ThreadPoolExecutor() as executor:\n",
+    "        results = list(executor.map(process_batch, batches))\n",
+    "    \n",
+    "    for batch_map, batch_count in results:\n",
+    "        total_map += batch_map\n",
+    "        count_users += batch_count\n",
+    "    \n",
+    "    MAP_at_K = total_map / count_users if count_users > 0 else 0\n",
+    "    return MAP_at_K\n",
     "\n",
-    "print(\"Average Precision:\", avg_precision)\n",
-    "print(\"Average Recall:\", avg_recall)\n"
+    "reader = Reader(rating_scale=(1,5))\n",
+    "data = Dataset.load_from_df(data[['user', 'item', 'rating']], reader)\n",
+    "# data = Dataset.load_builtin('ml-100k')\n",
+    "trainset, testset = train_test_split(data, test_size=0.2)\n",
+    "print(trainset.n_users)\n",
+    "model = SVD()\n",
+    "model.fit(trainset)\n",
+    "K_values = [1, 5, 10, 15, 20]\n",
+    "\n",
+    "with ThreadPoolExecutor() as executor:\n",
+    "    futures = {executor.submit(MAP_at_K_MF_batch, model=model, data=testset, K=k, batch_size=100): k for k in K_values}\n",
+    "    for future in as_completed(futures):\n",
+    "        k = futures[future]\n",
+    "        try:\n",
+    "            map_result = future.result()\n",
+    "            print(f'MAP @ {k}: {map_result}')\n",
+    "        except Exception as e:\n",
+    "            print(f'Failed to compute MAP @ {k} due to {e}')\n",
+    "\n",
+    "############# POPULAR CONTRACT RECOMMENDER ###############\n",
+    "# def MAP_at_K_PCR(data=None, K=None):\n",
+    "#     total_map = 0.0\n",
+    "#     count_users = 0\n",
+    "    \n",
+    "#     for user in data['user'].unique():\n",
+    "#         true_items = data[data['user'] == user]['item'].tolist()\n",
+    "#         if len(true_items) == 0:\n",
+    "#             continue\n",
+    "        \n",
+    "#         predicted_items = data.groupby('item')['rating'].sum().sort_values(ascending=False).head(K).index.tolist()\n",
+    "#         hits = 0\n",
+    "#         sum_precisions = 0.0\n",
+    "#         for k in range(1, K+1):\n",
+    "#             item_at_k = predicted_items[k - 1]\n",
+    "#             if item_at_k in true_items:\n",
+    "#                 hits += 1\n",
+    "#                 precision_at_k = hits / k\n",
+    "#                 sum_precisions += precision_at_k\n",
+    "                \n",
+    "#         average_precision = sum_precisions / min(len(true_items), K)\n",
+    "#         total_map += average_precision\n",
+    "#         count_users += 1\n",
+    "    \n",
+    "#     MAP_at_K = total_map / count_users if count_users > 0 else 0\n",
+    "#     return MAP_at_K\n",
+    "\n",
+    "# with ThreadPoolExecutor() as executor:\n",
+    "#     futures = {executor.submit(MAP_at_K_PCR, data=data, K=k): k for k in K_values}\n",
+    "\n",
+    "#     for future in as_completed(futures):\n",
+    "#         k = futures[future]\n",
+    "#         try:\n",
+    "#             map_result = future.result()\n",
+    "#             print(f'MAP @ {k}: {map_result}')\n",
+    "#         except Exception as e:\n",
+    "#             print(f'Failed to compute MAP @ {k} due to {e}')\n",
+    "\n",
+    "\n"
    ]
   },
   {
