--- a/init.ipynb
+++ b/init.ipynb
@@ -1505,61 +1505,6 @@
     "'''The average percision just tell us how relevant our recommendations are, \n",
     "    but dosn't tell us how good our ranking is\n",
     "'''\n",
-    "def MAP_at_K_MF_batch(model=None, data=None, K=None, batch_size=100):\n",
-    "    total_map = 0.0\n",
-    "    count_users = 0\n",
-    "    \n",
-    "    user_ids = [uid for uid, _, _ in data]\n",
-    "    unique_user_ids = list(set(user_ids))\n",
-    "    \n",
-    "    # Divide unique_user_ids into batches\n",
-    "    batches = [unique_user_ids[i:i + batch_size] for i in range(0, len(unique_user_ids), batch_size)]\n",
-    "    \n",
-    "    def process_batch(batch):\n",
-    "        nonlocal total_map, count_users\n",
-    "        item_ids = [iid for _, iid, _ in data]\n",
-    "        \n",
-    "        batch_map = 0.0\n",
-    "        batch_count = 0\n",
-    "        \n",
-    "        for uid in batch:\n",
-    "            true_relevant = [iid for (u, iid, r) in data if u == uid]\n",
-    "            if len(true_relevant) == 0:\n",
-    "                continue\n",
-    "            \n",
-    "            predicted_items = get_prediction(K, uid, item_ids, model)\n",
-    "            hits = 0\n",
-    "            sum_precisions = 0.0\n",
-    "            \n",
-    "            for k in range(1, K + 1):\n",
-    "                item_at_k = predicted_items[k - 1]\n",
-    "                if item_at_k in true_relevant:\n",
-    "                    hits += 1\n",
-    "                    precision_at_k = hits / k\n",
-    "                    sum_precisions += precision_at_k\n",
-    "                    \n",
-    "            average_precision = sum_precisions / min(len(true_relevant), K)\n",
-    "            batch_map += average_precision\n",
-    "            batch_count += 1\n",
-    "            \n",
-    "        return batch_map, batch_count\n",
-    "    \n",
-    "    def get_prediction(K, uid, item_ids, model):\n",
-    "        predicted_scores = [model.predict(uid, iid).est for iid in item_ids]\n",
-    "        top_k_indices = np.argsort(predicted_scores)[::-1][:K]\n",
-    "        results = [item_ids[i] for i in top_k_indices]\n",
-    "        return results\n",
-    "\n",
-    "    with ThreadPoolExecutor() as executor:\n",
-    "        results = list(executor.map(process_batch, batches))\n",
-    "    \n",
-    "    for batch_map, batch_count in results:\n",
-    "        total_map += batch_map\n",
-    "        count_users += batch_count\n",
-    "    \n",
-    "    MAP_at_K = total_map / count_users if count_users > 0 else 0\n",
-    "    return MAP_at_K\n",
-    "\n",
     "reader = Reader(rating_scale=(1,5))\n",
     "data = Dataset.load_from_df(data[['user', 'item', 'rating']], reader)\n",
     "# data = Dataset.load_builtin('ml-100k')\n",
@@ -1568,16 +1513,29 @@
     "model = SVD()\n",
     "model.fit(trainset)\n",
     "K_values = [1, 5, 10, 15, 20]\n",
+    "predictions = model.test(testset)\n",
     "\n",
-    "with ThreadPoolExecutor() as executor:\n",
-    "    futures = {executor.submit(MAP_at_K_MF_batch, model=model, data=testset, K=k, batch_size=100): k for k in K_values}\n",
-    "    for future in as_completed(futures):\n",
-    "        k = futures[future]\n",
-    "        try:\n",
-    "            map_result = future.result()\n",
-    "            print(f'MAP @ {k}: {map_result}')\n",
-    "        except Exception as e:\n",
-    "            print(f'Failed to compute MAP @ {k} due to {e}')\n",
+    "for K in K_values:\n",
+    "    user_est_true = defaultdict(list)\n",
+    "    for uid, _, true_r, est, _ in predictions:\n",
+    "        user_est_true[uid].append((est, true_r))\n",
+    "\n",
+    "    mapk_sum = 0.0\n",
+    "    num_users = 0\n",
+    "    for uid, user_ratings in user_est_true.items():\n",
+    "        user_ratings.sort(key=lambda x: x[0], reverse=True)\n",
+    "        num_relevant_items = sum((true_r) for (_, true_r) in user_ratings)\n",
+    "        num_recommended_items_at_k = sum((est) for (est, _) in user_ratings[:K])\n",
+    "        num_relevant_and_recommended_at_k = sum(((true_r) and (est)) for (est, true_r) in user_ratings[:K])\n",
+    "        if num_recommended_items_at_k == 0:\n",
+    "            continue\n",
+    "\n",
+    "        apk = num_relevant_and_recommended_at_k / num_recommended_items_at_k\n",
+    "        mapk_sum += apk\n",
+    "        num_users += 1\n",
+    "\n",
+    "    mapk = mapk_sum / num_users\n",
+    "    print(f\"MAP@{K}: {mapk}\")\n",
     "\n",
     "############# POPULAR CONTRACT RECOMMENDER ###############\n",
     "# def MAP_at_K_PCR(data=None, K=None):\n",
