--- a/Contract_level_MFR.ipynb
+++ b/Contract_level_MFR.ipynb
@@ -2,23 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import json\n",
+    "from tqdm import tqdm\n",
+    "import os\n",
+    "from gensim import corpora\n",
+    "from gensim.models import LdaModel\n",
+    "from gensim.parsing.preprocessing import preprocess_string, strip_tags, strip_punctuation, strip_numeric, stem_text\n",
+    "from gensim.parsing.preprocessing import split_alphanum, remove_stopwords\n",
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.preprocessing import normalize"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "####################### CONTRACT ADDRESSES IN USER_TXS DATASET ######################\n",
     "\n",
-    "# Load your dataframes\n",
     "user_transactions = pd.read_csv('dataset/user_transactions.csv')\n",
     "contract_addresses = pd.read_csv('dataset/contract_addresses.csv')\n",
-    "\n",
-    "# Extract unique addresses from 'from' and 'to' columns\n",
     "unique_addresses = pd.concat([user_transactions['from'], user_transactions['to']]).unique()\n",
-    "\n",
-    "# Check if these addresses exist in contract_addresses\n",
     "matches = contract_addresses[contract_addresses['address'].isin(unique_addresses)]\n",
-    "\n",
-    "# Write the matches to a CSV file\n",
     "matches.to_csv('contract_addresses_in_user_txs.csv', index=False)"
    ]
   },
@@ -216,8 +229,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "sean2",
+   "language": "python",
+   "name": "sean2"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.17"
   },
   "orig_nbformat": 4
  },
