--- a/init.ipynb
+++ b/init.ipynb
@@ -275,7 +275,19 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAP @ 15: 0.21335785806354834\n",
+      "MAP @ 5: 0.21787821763776183\n",
+      "MAP @ 20: 0.2167407628411468\n",
+      "MAP @ 10: 0.21089863673513445\n",
+      "MAP @ 1: 0.23371433881609516\n"
+     ]
+    }
+   ],
    "source": [
     "############# RUNNING BASELINE RECOMMENDERS ###############\n",
     "\n",
