--- a/init.ipynb
+++ b/init.ipynb
@@ -49,6 +49,7 @@
     "from surprise import Dataset, Reader, SVD, accuracy\n",
     "from surprise.model_selection import cross_validate, KFold, train_test_split\n",
     "from mlxtend.frequent_patterns import apriori, association_rules\n",
+    "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
     "from neo4j import GraphDatabase\n",
     "import re\n",
     "import matplotlib.pyplot as plt\n",
@@ -58,7 +59,7 @@
     "import torch\n",
     "from torch_geometric.nn import GCNConv\n",
     "import torch.nn.functional as F\n",
-    "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
+    "\n",
     "# from pymongo import MongoClient"
    ]
   },
@@ -325,95 +326,95 @@
     "'''The average percision just tell us how relevant our recommendations are, \n",
     "    but dosn't tell us how good our ranking is\n",
     "'''\n",
-    "# reader = Reader(rating_scale=(1,5))\n",
-    "# data = Dataset.load_from_df(data[['user', 'item', 'rating']], reader)\n",
-    "# # data = Dataset.load_builtin('ml-100k')\n",
-    "# trainset, testset = train_test_split(data, test_size=0.2)\n",
-    "# print(trainset.n_users)\n",
-    "# model = SVD()\n",
-    "# model.fit(trainset)\n",
-    "# K_values = [1, 5, 10, 15, 20]\n",
-    "# predictions = model.test(testset)\n",
-    "# print(len(predictions))\n",
+    "reader = Reader(rating_scale=(1,5))\n",
+    "data = Dataset.load_from_df(data[['user', 'item', 'rating']], reader)\n",
+    "# data = Dataset.load_builtin('ml-100k')\n",
+    "trainset, testset = train_test_split(data, test_size=0.2)\n",
+    "print(trainset.n_users)\n",
+    "model = SVD()\n",
+    "model.fit(trainset)\n",
+    "K_values = [1, 5, 10, 15, 20]\n",
+    "predictions = model.test(testset)\n",
+    "print(len(predictions))\n",
     "\n",
-    "# for K in K_values:\n",
-    "#     user_est_true = defaultdict(list)\n",
-    "#     user_actual_items = defaultdict(list)\n",
+    "################### MAP@K EVAL WITH MODEL.TEST ######################\n",
+    "for K in K_values:\n",
+    "    user_est_true = defaultdict(list)\n",
+    "    user_actual_items = defaultdict(list)\n",
     "\n",
-    "#     for uid, iid, true_r, est, _ in predictions:\n",
-    "#         user_est_true[uid].append((iid, est))\n",
-    "#         user_actual_items[uid].append(iid)\n",
+    "    for uid, iid, true_r, est, _ in predictions:\n",
+    "        user_est_true[uid].append((iid, est))\n",
+    "        user_actual_items[uid].append(iid)\n",
     "\n",
-    "#     # Compute custom MAP@K\n",
-    "#     mapk_sum = 0.0\n",
-    "#     num_users = 0\n",
+    "    # Compute custom MAP@K\n",
+    "    mapk_sum = 0.0\n",
+    "    num_users = 0\n",
     "\n",
-    "#     for uid, user_ratings in user_est_true.items():\n",
-    "#         # Sort user ratings by estimated value\n",
-    "#         user_ratings.sort(key=lambda x: x[1], reverse=True)\n",
+    "    for uid, user_ratings in user_est_true.items():\n",
+    "        # Sort user ratings by estimated value\n",
+    "        user_ratings.sort(key=lambda x: x[1], reverse=True)\n",
     "\n",
-    "#         # Get the top-K recommended items\n",
-    "#         top_k_items = [iid for iid, _ in user_ratings[:K]]\n",
+    "        # Get the top-K recommended items\n",
+    "        top_k_items = [iid for iid, _ in user_ratings[:K]]\n",
     "        \n",
-    "#         # Get the actual items the user has interacted with\n",
-    "#         actual_items = user_actual_items.get(uid, [])\n",
+    "        # Get the actual items the user has interacted with\n",
+    "        actual_items = user_actual_items.get(uid, [])\n",
     "        \n",
-    "#         # Compute the intersection of top-K and actual items\n",
-    "#         num_hits = len(set(top_k_items) & set(actual_items))\n",
+    "        # Compute the intersection of top-K and actual items\n",
+    "        num_hits = len(set(top_k_items) & set(actual_items))\n",
     "        \n",
-    "#         # Avoid division by zero\n",
-    "#         if len(actual_items) == 0:\n",
-    "#             continue\n",
+    "        # Avoid division by zero\n",
+    "        if len(actual_items) == 0:\n",
+    "            continue\n",
     "\n",
-    "#         # Compute Average Precision@K for this user\n",
-    "#         apk = num_hits / len(top_k_items)\n",
+    "        # Compute Average Precision@K for this user\n",
+    "        apk = num_hits / len(top_k_items)\n",
     "        \n",
-    "#         # Update MAP@K\n",
-    "#         mapk_sum += apk\n",
-    "#         num_users += 1\n",
+    "        # Update MAP@K\n",
+    "        mapk_sum += apk\n",
+    "        num_users += 1\n",
     "\n",
-    "#     mapk = mapk_sum / num_users\n",
-    "#     print(f\"Custom MAP@{K}: {mapk}\")\n",
+    "    mapk = mapk_sum / num_users\n",
+    "    print(f\"Custom MAP@{K}: {mapk}\")\n",
     "\n",
     "############# POPULAR CONTRACT RECOMMENDER ###############\n",
-    "def MAP_at_K_PCR(data=None, K=None):\n",
-    "    total_map = 0.0\n",
-    "    count_users = 0\n",
+    "# def MAP_at_K_PCR(data=None, K=None):\n",
+    "#     total_map = 0.0\n",
+    "#     count_users = 0\n",
     "    \n",
-    "    for user in data['user'].unique():\n",
-    "        true_items = data[data['user'] == user]['item'].tolist()\n",
-    "        if len(true_items) == 0:\n",
-    "            continue\n",
+    "#     for user in data['user'].unique():\n",
+    "#         true_items = data[data['user'] == user]['item'].tolist()\n",
+    "#         if len(true_items) == 0:\n",
+    "#             continue\n",
     "        \n",
-    "        predicted_items = data.groupby('item')['rating'].sum().sort_values(ascending=False).head(K).index.tolist()\n",
-    "        hits = 0\n",
-    "        sum_precisions = 0.0\n",
-    "        for k in range(1, K+1):\n",
-    "            item_at_k = predicted_items[k - 1]\n",
-    "            if item_at_k in true_items:\n",
-    "                hits += 1\n",
-    "                precision_at_k = hits / k\n",
-    "                sum_precisions += precision_at_k\n",
+    "#         predicted_items = data.groupby('item')['rating'].sum().sort_values(ascending=False).head(K).index.tolist()\n",
+    "#         hits = 0\n",
+    "#         sum_precisions = 0.0\n",
+    "#         for k in range(1, K+1):\n",
+    "#             item_at_k = predicted_items[k - 1]\n",
+    "#             if item_at_k in true_items:\n",
+    "#                 hits += 1\n",
+    "#                 precision_at_k = hits / k\n",
+    "#                 sum_precisions += precision_at_k\n",
     "                \n",
-    "        average_precision = sum_precisions / min(len(true_items), K)\n",
-    "        total_map += average_precision\n",
-    "        count_users += 1\n",
+    "#         average_precision = sum_precisions / min(len(true_items), K)\n",
+    "#         total_map += average_precision\n",
+    "#         count_users += 1\n",
     "    \n",
-    "    MAP_at_K = total_map / count_users if count_users > 0 else 0\n",
-    "    return MAP_at_K\n",
+    "#     MAP_at_K = total_map / count_users if count_users > 0 else 0\n",
+    "#     return MAP_at_K\n",
     "\n",
-    "with ThreadPoolExecutor() as executor:\n",
-    "    K_values = [1, 5, 10, 15, 20]\n",
-    "    futures = {executor.submit(MAP_at_K_PCR, data=data, K=k): k for k in K_values}\n",
+    "# with ThreadPoolExecutor() as executor:\n",
+    "#     K_values = [1, 5, 10, 15, 20]\n",
+    "#     futures = {executor.submit(MAP_at_K_PCR, data=data, K=k): k for k in K_values}\n",
     "\n",
-    "    for future in as_completed(futures):\n",
-    "        k = futures[future]\n",
-    "        try:\n",
-    "            map_result = future.result()\n",
-    "            print(f'MAP @ {k}: {map_result}')\n",
-    "        except Exception as e:\n",
-    "            print(f'Failed to compute MAP @ {k} due to {e}')\n",
-    "\n",
+    "#     for future in as_completed(futures):\n",
+    "#         k = futures[future]\n",
+    "#         try:\n",
+    "#             map_result = future.result()\n",
+    "#             print(f'MAP @ {k}: {map_result}')\n",
+    "#         except Exception as e:\n",
+    "#             print(f'Failed to compute MAP @ {k} due to {e}')\n",
     "\n"
    ]
   },
