fixed mapk eval bug for contract level mfr notebook

--- a/Dataset_creator.ipynb
+++ b/Dataset_creator.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -389,11 +399,94 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                          address  count\n",
+      "0      0x0000000000000000000000000000000000000000     50\n",
+      "1      0x000000000000000000000000000000000000dead     50\n",
+      "2      0x00000000000357848314f068feca5d42e878a1d9     50\n",
+      "3      0x000000000074b24153d2d44e9d1beb308d8a1eb6     50\n",
+      "4      0x0000000048429ba5463a4a9aa866460087dcebd0     50\n",
+      "...                                           ...    ...\n",
+      "50646  0xfffe695cb09f056e0ddfdd8f0e447037610c945b     50\n",
+      "50647  0xffff14106945bcb267b34711c416aa3085b8865f     50\n",
+      "50648  0xffff3dcb664c3f69b049d121fba7b7d7273961ef     50\n",
+      "50649  0xffff46e05a09314daae9176fc32dba0f4172dcdb     50\n",
+      "50650  0xffff83075509851dca62ca604f191478ff041fd3     50\n",
+      "\n",
+      "[28833 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How many users in user-tx dataset have >=50 transactions?\n",
+    "temp_df = pd.read_csv(\"dataset/user_transactions.csv\")\n",
+    "grouped = temp_df.groupby('address').size().reset_index(name='count')\n",
+    "target = grouped[grouped['count'] == 50]\n",
+    "print(target)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50651\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(temp_df['address'].unique()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#BUGFIX: \n",
+    "''' If we want to refetch these 28833 addresses transactions, first we need to run the pre-run 4 steps \n",
+    "before running the fetch_tx.py script. Then, Run the fetch_tx.py, but update the Step3 to check if we had the from to timestamp\n",
+    "skip the tx, otherwise append that. Then run the script to find all unique contract addresses within the new user_tx.csv that were not\n",
+    "before in old user_tx.csv. Now run the smart contract downloader and verified_smart_contract to first download the new contracts\n",
+    "and then parse them (Now we have the final parquet file of new parsed contracts). Now from parquets we update the \n",
+    "contract_addressed_with_names.csv (append new unique ones). EOA addresses are the same but we need to run the EDA for anything related \n",
+    "to contracts. Then rerun all recommenders.\n",
+    "'''"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
