--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -276,9 +276,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "sean2",
    "language": "python",
-   "name": "python3"
+   "name": "sean2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -290,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.17"
   },
   "orig_nbformat": 4
  },
