bug fixed name level cf recommender and clean up init notebook

--- a/Archive.ipynb
+++ b/Archive.ipynb
@@ -470,6 +470,231 @@
     "    \n",
     "df.to_csv('dataset/adj_matrix_kmean_tags.csv', index=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "############ MAP@K IMPLEMEMNTATION WITH LATENT FACTOR MATRIX MUL #############\n",
+    "\n",
+    "def average_precision_at_k(k, predicted, true_rated):\n",
+    "    if len(predicted) > k:\n",
+    "        predicted = predicted[:k]\n",
+    "\n",
+    "    score = 0.0\n",
+    "    num_hits = 0.0\n",
+    "\n",
+    "    for i, p in enumerate(predicted):\n",
+    "        if p in true_rated:\n",
+    "            num_hits += 1.0\n",
+    "            score += num_hits / (i + 1.0)\n",
+    "\n",
+    "    if len(true_rated) == 0:\n",
+    "        return 0.0\n",
+    "\n",
+    "    return score / min(len(true_rated), k)\n",
+    "\n",
+    "# Create a dataframe with user-item ratings\n",
+    "data = pd.read_parquet('dataset/user_contract_rating.parquet')\n",
+    "data = data[:10000]\n",
+    "###### DATA PREPROCESSING #######\n",
+    "def apply_rating_scale(rating):\n",
+    "    if rating == 1:\n",
+    "        return 1\n",
+    "    elif rating <= 5:\n",
+    "        return 2\n",
+    "    elif rating <= 15:\n",
+    "        return 3\n",
+    "    elif rating <= 30:\n",
+    "        return 4\n",
+    "    else:\n",
+    "        return 5\n",
+    "data['rating'] = data['rating'].apply(apply_rating_scale)\n",
+    "\n",
+    "reader = Reader(rating_scale=(1, 5))\n",
+    "data = Dataset.load_from_df(data, reader)\n",
+    "trainset = data.build_full_trainset()\n",
+    "\n",
+    "# Train the model\n",
+    "model = SVD()\n",
+    "model.fit(trainset)\n",
+    "\n",
+    "# Extract latent factors\n",
+    "user_factors = model.pu\n",
+    "item_factors = model.qi\n",
+    "\n",
+    "# Predict ratings\n",
+    "predicted_ratings = np.dot(user_factors, item_factors.T)\n",
+    "\n",
+    "# Test set\n",
+    "_, testset = train_test_split(data, test_size=0.2)\n",
+    "\n",
+    "# Calculate MAP@K\n",
+    "k = 20\n",
+    "mapk_values = []\n",
+    "\n",
+    "for uid, iid, true_r in testset:\n",
+    "    inner_uid = trainset.to_inner_uid(uid)\n",
+    "    inner_iid = trainset.to_inner_iid(iid)\n",
+    "\n",
+    "    # Get predicted ratings for this user\n",
+    "    user_predicted_ratings = predicted_ratings[inner_uid]\n",
+    "\n",
+    "    # Get top-k item indexes\n",
+    "    top_k_items = np.argsort(user_predicted_ratings)[::-1][:k]\n",
+    "\n",
+    "    # Map inner ids of items to raw ids\n",
+    "    top_k_items_raw_ids = [trainset.to_raw_iid(inner_id) for inner_id in top_k_items]\n",
+    "\n",
+    "    # Get the list of true positive items for this user in the test set\n",
+    "    true_positive_items = [j for (u, j, _) in testset if u == uid]\n",
+    "\n",
+    "    # Calculate AP@K for this user\n",
+    "    apk = average_precision_at_k(k, top_k_items_raw_ids, set(true_positive_items))\n",
+    "    mapk_values.append(apk)\n",
+    "\n",
+    "# Calculate the mean AP@K over all users\n",
+    "MAPK = np.mean(mapk_values)\n",
+    "print(f\"MAP@K: {MAPK}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MOVED LATEST VERSION OF BELOW CODE TO vf_recommender/cf_recommender_name_level.py\n",
+    "\n",
+    "############# RUNNING BASELINE RECOMMENDERS ###############\n",
+    "data = pd.read_parquet('dataset/user_contract_rating.parquet')\n",
+    "data = data[:100000]\n",
+    "###### DATA PREPROCESSING #######\n",
+    "def apply_rating_scale(rating):\n",
+    "    if rating == 1:\n",
+    "        return 1\n",
+    "    elif rating <= 5:\n",
+    "        return 2\n",
+    "    elif rating <= 15:\n",
+    "        return 3\n",
+    "    elif rating <= 30:\n",
+    "        return 4\n",
+    "    else:\n",
+    "        return 5\n",
+    "data['rating'] = data['rating'].apply(apply_rating_scale)\n",
+    "\n",
+    "\n",
+    "################# AUTO-EVAL SVD CF #####################\n",
+    "# algo = SVD()\n",
+    "# print('cf started')\n",
+    "# cross_validate(algo, data, measures=['RMSE', 'MAE'], cv=5, verbose=True)\n",
+    "\n",
+    "################# AUTO-EVAL KNN CF #####################\n",
+    "# sim_options = {\n",
+    "#     'name': 'cosine',\n",
+    "#     'user_based': True\n",
+    "# }\n",
+    "# algo = KNNBasic(sim_options=sim_options)\n",
+    "# cross_validate(algo, data, measures=['RMSE', 'MAE'], cv=5, verbose=True)\n",
+    "\n",
+    "#################### CF RECOMMENDER #######################\n",
+    "'''The average percision just tell us how relevant our recommendations are, \n",
+    "    but dosn't tell us how good our ranking is\n",
+    "'''\n",
+    "reader = Reader(rating_scale=(1,5))\n",
+    "data = Dataset.load_from_df(data[['user', 'item', 'rating']], reader)\n",
+    "# data = Dataset.load_builtin('ml-100k')\n",
+    "trainset, testset = train_test_split(data, test_size=0.2)\n",
+    "print(trainset.n_users)\n",
+    "model = SVD()\n",
+    "model.fit(trainset)\n",
+    "K_values = [1, 5, 10, 15, 20]\n",
+    "predictions = model.test(testset)\n",
+    "print(len(predictions))\n",
+    "\n",
+    "################### MAP@K EVAL WITH MODEL.TEST ######################\n",
+    "for K in K_values:\n",
+    "    user_est_true = defaultdict(list)\n",
+    "    user_actual_items = defaultdict(list)\n",
+    "\n",
+    "    for uid, iid, true_r, est, _ in predictions:\n",
+    "        user_est_true[uid].append((iid, est))\n",
+    "        user_actual_items[uid].append(iid)\n",
+    "\n",
+    "    # Compute custom MAP@K\n",
+    "    mapk_sum = 0.0\n",
+    "    num_users = 0\n",
+    "\n",
+    "    for uid, user_ratings in user_est_true.items():\n",
+    "        # Sort user ratings by estimated value\n",
+    "        user_ratings.sort(key=lambda x: x[1], reverse=True)\n",
+    "\n",
+    "        # Get the top-K recommended items\n",
+    "        top_k_items = [iid for iid, _ in user_ratings[:K]]\n",
+    "        \n",
+    "        # Get the actual items the user has interacted with\n",
+    "        actual_items = user_actual_items.get(uid, [])\n",
+    "        \n",
+    "        # Compute the intersection of top-K and actual items\n",
+    "        num_hits = len(set(top_k_items) & set(actual_items))\n",
+    "        \n",
+    "        # Avoid division by zero\n",
+    "        if len(actual_items) == 0:\n",
+    "            continue\n",
+    "\n",
+    "        # Compute Average Precision@K for this user\n",
+    "        apk = num_hits / len(top_k_items)\n",
+    "        \n",
+    "        # Update MAP@K\n",
+    "        mapk_sum += apk\n",
+    "        num_users += 1\n",
+    "\n",
+    "    mapk = mapk_sum / num_users\n",
+    "    print(f\"Custom MAP@{K}: {mapk}\")\n",
+    "\n",
+    "############# POPULAR CONTRACT RECOMMENDER ###############\n",
+    "# def MAP_at_K_PCR(data=None, K=None):\n",
+    "#     total_map = 0.0\n",
+    "#     count_users = 0\n",
+    "    \n",
+    "#     for user in data['user'].unique():\n",
+    "#         true_items = data[data['user'] == user]['item'].tolist()\n",
+    "#         if len(true_items) == 0:\n",
+    "#             continue\n",
+    "        \n",
+    "#         predicted_items = data.groupby('item')['rating'].sum().sort_values(ascending=False).head(K).index.tolist()\n",
+    "#         hits = 0\n",
+    "#         sum_precisions = 0.0\n",
+    "#         for k in range(1, K+1):\n",
+    "#             item_at_k = predicted_items[k - 1]\n",
+    "#             if item_at_k in true_items:\n",
+    "#                 hits += 1\n",
+    "#                 precision_at_k = hits / k\n",
+    "#                 sum_precisions += precision_at_k\n",
+    "                \n",
+    "#         average_precision = sum_precisions / min(len(true_items), K)\n",
+    "#         total_map += average_precision\n",
+    "#         count_users += 1\n",
+    "    \n",
+    "#     MAP_at_K = total_map / count_users if count_users > 0 else 0\n",
+    "#     return MAP_at_K\n",
+    "\n",
+    "# with ThreadPoolExecutor() as executor:\n",
+    "#     K_values = [1, 5, 10, 15, 20]\n",
+    "#     futures = {executor.submit(MAP_at_K_PCR, data=data, K=k): k for k in K_values}\n",
+    "\n",
+    "#     for future in as_completed(futures):\n",
+    "#         k = futures[future]\n",
+    "#         try:\n",
+    "#             map_result = future.result()\n",
+    "#             print(f'MAP @ {k}: {map_result}')\n",
+    "#         except Exception as e:\n",
+    "#             print(f'Failed to compute MAP @ {k} due to {e}')\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
