--- a/GNN_recommender_pyg.ipynb
+++ b/GNN_recommender_pyg.ipynb
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,15 +316,15 @@
     "            )\n",
     "            return pred\n",
     "            \n",
+    "    ########## TRAINING ##########\n",
     "    model = Model(hidden_channels=64)\n",
-    "\n",
     "    import tqdm\n",
     "    import torch.nn.functional as F\n",
     "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "    print(f\"Device: '{device}'\")\n",
     "    model = model.to(device)\n",
     "    optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
-    "    for epoch in range(1, 20):\n",
+    "    for epoch in range(1, 10):\n",
     "        total_loss = total_examples = 0\n",
     "        for sampled_data in tqdm.tqdm(train_loader):\n",
     "            optimizer.zero_grad()\n",
@@ -340,7 +340,7 @@
     "        # TODO: Add the val_loader, keep the best model\n",
     "        print(f\"Epoch: {epoch:03d}, Loss: {total_loss / total_examples:.4f}\")\n",
     "\n",
-    "    # Define the validation seed edges:\n",
+    "    ########## EVAL VALIDATION #########\n",
     "    edge_label_index = val_data[\"user\", \"rates\", \"item\"].edge_label_index\n",
     "    edge_label = val_data[\"user\", \"rates\", \"item\"].edge_label\n",
     "    # val_data has neg samples in it\n",
@@ -408,33 +408,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0., 0., 1.,  ..., 0., 0., 0.],\n",
-      "        [0., 0., 1.,  ..., 0., 0., 0.],\n",
-      "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "        ...,\n",
-      "        [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "        [0., 1., 0.,  ..., 0., 0., 0.],\n",
-      "        [0., 0., 0.,  ..., 0., 0., 0.]])\n",
-      "Data(x=[10352, 20], edge_index=[2, 100836])\n",
-      "<torch.utils.data.dataset.Subset object at 0x29f8baa60>\n"
+      "\n",
+      "Validation AUC: 0.9349\n"
      ]
     },
     {
-     "ename": "KeyError",
-     "evalue": "1",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[18], line 24\u001b[0m\n\u001b[1;32m     21\u001b[0m unique_users \u001b[39m=\u001b[39m \u001b[39mset\u001b[39m()\n\u001b[1;32m     22\u001b[0m unique_items \u001b[39m=\u001b[39m \u001b[39mset\u001b[39m()\n\u001b[0;32m---> 24\u001b[0m \u001b[39mfor\u001b[39;00m data \u001b[39min\u001b[39;00m train_loader:\n\u001b[1;32m     25\u001b[0m     user, item \u001b[39m=\u001b[39m data\u001b[39m.\u001b[39medge_index\n\u001b[1;32m     26\u001b[0m     unique_users\u001b[39m.\u001b[39mupdate(user\u001b[39m.\u001b[39mtolist())\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.9.16/lib/python3.9/site-packages/torch/utils/data/dataloader.py:628\u001b[0m, in \u001b[0;36m_BaseDataLoaderIter.__next__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    625\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_sampler_iter \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    626\u001b[0m     \u001b[39m# TODO(https://github.com/pytorch/pytorch/issues/76750)\u001b[39;00m\n\u001b[1;32m    627\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reset()  \u001b[39m# type: ignore[call-arg]\u001b[39;00m\n\u001b[0;32m--> 628\u001b[0m data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_next_data()\n\u001b[1;32m    629\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_num_yielded \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m    630\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_dataset_kind \u001b[39m==\u001b[39m _DatasetKind\u001b[39m.\u001b[39mIterable \u001b[39mand\u001b[39;00m \\\n\u001b[1;32m    631\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_IterableDataset_len_called \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m \\\n\u001b[1;32m    632\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_num_yielded \u001b[39m>\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_IterableDataset_len_called:\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.9.16/lib/python3.9/site-packages/torch/utils/data/dataloader.py:671\u001b[0m, in \u001b[0;36m_SingleProcessDataLoaderIter._next_data\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    669\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_next_data\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m    670\u001b[0m     index \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_next_index()  \u001b[39m# may raise StopIteration\u001b[39;00m\n\u001b[0;32m--> 671\u001b[0m     data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_dataset_fetcher\u001b[39m.\u001b[39;49mfetch(index)  \u001b[39m# may raise StopIteration\u001b[39;00m\n\u001b[1;32m    672\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_pin_memory:\n\u001b[1;32m    673\u001b[0m         data \u001b[39m=\u001b[39m _utils\u001b[39m.\u001b[39mpin_memory\u001b[39m.\u001b[39mpin_memory(data, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_pin_memory_device)\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.9.16/lib/python3.9/site-packages/torch/utils/data/_utils/fetch.py:58\u001b[0m, in \u001b[0;36m_MapDatasetFetcher.fetch\u001b[0;34m(self, possibly_batched_index)\u001b[0m\n\u001b[1;32m     56\u001b[0m         data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset\u001b[39m.\u001b[39m__getitems__(possibly_batched_index)\n\u001b[1;32m     57\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m---> 58\u001b[0m         data \u001b[39m=\u001b[39m [\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset[idx] \u001b[39mfor\u001b[39;00m idx \u001b[39min\u001b[39;00m possibly_batched_index]\n\u001b[1;32m     59\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     60\u001b[0m     data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset[possibly_batched_index]\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.9.16/lib/python3.9/site-packages/torch/utils/data/_utils/fetch.py:58\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     56\u001b[0m         data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset\u001b[39m.\u001b[39m__getitems__(possibly_batched_index)\n\u001b[1;32m     57\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m---> 58\u001b[0m         data \u001b[39m=\u001b[39m [\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdataset[idx] \u001b[39mfor\u001b[39;00m idx \u001b[39min\u001b[39;00m possibly_batched_index]\n\u001b[1;32m     59\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     60\u001b[0m     data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset[possibly_batched_index]\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.9.16/lib/python3.9/site-packages/torch/utils/data/dataset.py:295\u001b[0m, in \u001b[0;36mSubset.__getitem__\u001b[0;34m(self, idx)\u001b[0m\n\u001b[1;32m    293\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(idx, \u001b[39mlist\u001b[39m):\n\u001b[1;32m    294\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset[[\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mindices[i] \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m idx]]\n\u001b[0;32m--> 295\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdataset[\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mindices[idx]]\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.9.16/lib/python3.9/site-packages/torch_geometric/data/data.py:498\u001b[0m, in \u001b[0;36mData.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    497\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__getitem__\u001b[39m(\u001b[39mself\u001b[39m, key: \u001b[39mstr\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Any:\n\u001b[0;32m--> 498\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_store[key]\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.9.16/lib/python3.9/site-packages/torch_geometric/data/storage.py:111\u001b[0m, in \u001b[0;36mBaseStorage.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    110\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__getitem__\u001b[39m(\u001b[39mself\u001b[39m, key: \u001b[39mstr\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Any:\n\u001b[0;32m--> 111\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_mapping[key]\n",
-      "\u001b[0;31mKeyError\u001b[0m: 1"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -529,17 +511,17 @@
     "###### MOVIELENS MODEL ######\n",
     "data, train_data, val_data, train_loader, val_loader, ground_truth, pred, test_data = GNN_recommender(unique_user_id, movies_df, movie_feat, edge_index_user_to_movie)\n",
     "\n",
+    "# ablation_without_movie_feature = torch.zeros_like(movie_feat)\n",
+    "# data, train_data, val_data, train_loader, val_loader, ground_truth, pred, test_data = GNN_recommender(unique_user_id, movies_df, ablation_without_movie_feature, edge_index_user_to_movie)\n",
+    "\n",
     "###### CONTRACTS MODEL ######\n",
-    "# data, train_data, val_data, train_loader, val_loader, ground_truth, pred = GNN_recommender(unique_user_id, contracts_df, contract_feat, edge_index_user_to_contract)\n",
+    "# data, train_data, val_data, train_loader, val_loader, ground_truth, pred, test_data = GNN_recommender(unique_user_id, contracts_df, contract_feat, edge_index_user_to_contract)\n",
     "\n",
-    "# Ablation study of GNN (make contract_feat all zero)\n",
-    "# INFUTURE_ add timestamp to ?, then remove timestamp, add social_graph (user-user txs)\n",
-    "\n",
+    "# Ablation study of GNN\n",
     "# ablation_without_contract_feature = torch.zeros_like(contract_feat)\n",
     "# data, train_data, val_data, train_loader, val_loader, ground_truth, pred = GNN_recommender(unique_user_id, contracts_df, ablation_without_contract_feature, edge_index_user_to_contract)\n",
     "\n",
-    "# ablation_without_movie_feature = torch.zeros_like(movie_feat)\n",
-    "# data, train_data, val_data, train_loader, val_loader, ground_truth, pred = GNN_recommender(unique_user_id, movies_df, movie_feat, edge_index_user_to_movie)\n",
+    "\n",
     "\n",
     "# Cold Start User\n",
     "\n",
@@ -558,7 +540,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fucking lost the name-level train and pred\n",
+    "######## NAME LEVEL MF TRAIN & PRED #########\n",
     "print(val_loader.data)\n",
     "val_loader_df_index = val_loader.data['user', 'rates', 'item'].edge_label_index.numpy()\n",
     "val_loader_df_label = val_loader.data['user', 'rates', 'item'].edge_label.numpy()\n",
@@ -600,8 +582,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "######### HIT@K EVAL ##########\n",
     "# in val_data len(edge_index) = 80670, but len(edge_label_index) = 30249, we selected edge_label_index since for train_loader used the same\n",
-    "\n",
     "def precision_at_k(user_id, edge_index, ground_truth, pred, k):\n",
     "\n",
     "    mask = edge_index[0] == user_id\n",
@@ -634,16 +616,16 @@
     "\n",
     "k_values = [1, 2, 3, 4, 5]\n",
     "for k in k_values:\n",
-    "    hit_at_k = ap_at_k(k, precision_at_k, mode='mf')\n",
+    "    hit_at_k = ap_at_k(k, precision_at_k, mode='GNN')\n",
     "    print(f\"AP@{k}:\", hit_at_k)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "sean2",
    "language": "python",
-   "name": "python3"
+   "name": "sean2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -655,7 +637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.17"
   },
   "orig_nbformat": 4
  },
