--- a/GNN_recommender_pyg.ipynb
+++ b/GNN_recommender_pyg.ipynb
@@ -498,22 +498,11 @@
     "    train_data, test_data, unique_user_id, 0 if experiment == 'ucsp' else 1, 'CSP-user' if experiment == 'ucsp' else 'CSP-item'\n",
     ")\n",
     "\n",
-    "# experiment = 'ucsp'\n",
-    "# train_data_unique_users = set(train_data['user', 'rates', 'item'].edge_label_index[0].unique().numpy())\n",
-    "# unique_users = set(unique_user_id['mappedID'].unique())\n",
-    "# users_not_in_train = unique_users - train_data_unique_users\n",
-    "# mask_user = torch.tensor([user in users_not_in_train for user in test_data[\"user\", \"rates\", \"item\"].edge_label_index[0].numpy()])\n",
-    "# test_data_ucsp = copy.deepcopy(test_data)\n",
-    "# test_data_ucsp[\"user\", \"rates\", \"item\"].edge_label_index = test_data_ucsp[\"user\", \"rates\", \"item\"].edge_label_index[:, mask_user]\n",
-    "# test_data_ucsp[\"user\", \"rates\", \"item\"].edge_label = test_data_ucsp[\"user\", \"rates\", \"item\"].edge_label[mask_user]\n",
-    "# test_to_train_ratio_ucsp = len(test_data_ucsp[\"user\", \"rates\", \"item\"].edge_label_index[0]) / len(test_data[\"user\", \"rates\", \"item\"].edge_label_index[0])\n",
-    "# print('test to train ratio CSP-user', test_to_train_ratio_ucsp)\n",
+    "# TODO Diversity\n",
     "\n",
-    "# Diversity\n",
+    "# TODO Contract Representation (effect of f top-keywords in contract_feat)\n",
     "\n",
-    "# Contract Representation (effect of f top-keywords in contract_feat)\n",
-    "\n",
-    "# Sparsity (keep users just with > h interactions)"
+    "# TODO Sparsity (keep users just with > h interactions)"
    ]
   },
   {
