added MAP@k metric

--- a/GNN_recommender_pyg.ipynb
+++ b/GNN_recommender_pyg.ipynb
@@ -867,84 +867,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 565/565 [00:00<00:00, 1265.48it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AP@1: 0.05020648967551622\n"
+      "  0%|          | 0/565 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 565/565 [00:00<00:00, 1371.70it/s]\n"
+      "100%|██████████| 565/565 [00:00<00:00, 1208.98it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AP@5: 0.13712389380530973\n"
+      "HIT@1: 0.06725663716814159\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 565/565 [00:00<00:00, 1350.20it/s]\n"
+      "100%|██████████| 565/565 [00:00<00:00, 1225.65it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AP@10: 0.2058259587020649\n"
+      "HIT@5: 0.13725663716814163\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 565/565 [00:00<00:00, 1362.55it/s]\n"
+      "100%|██████████| 565/565 [00:00<00:00, 1229.29it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AP@15: 0.2698967551622419\n"
+      "HIT@10: 0.2058259587020649\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 565/565 [00:00<00:00, 1209.19it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AP@20: 0.31007374631268436\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 565/565 [00:00<00:00, 937.77it/s]\n"
+      "100%|██████████| 565/565 [00:00<00:00, 917.96it/s]\n"
      ]
     },
     {
@@ -958,7 +937,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 565/565 [00:00<00:00, 873.48it/s]\n"
+      "100%|██████████| 565/565 [00:00<00:00, 915.54it/s]\n"
      ]
     },
     {
@@ -972,7 +951,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 565/565 [00:00<00:00, 860.92it/s]\n"
+      "100%|██████████| 565/565 [00:00<00:00, 880.42it/s]\n"
      ]
     },
     {
@@ -986,28 +965,42 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 565/565 [00:00<00:00, 919.38it/s]\n"
+      "100%|██████████| 565/565 [00:00<00:00, 1447.86it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NDCG@15: 0.14467539332487264\n"
+      "MAP@1: 0.06725663716814159\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 565/565 [00:00<00:00, 898.94it/s]"
+      "100%|██████████| 565/565 [00:00<00:00, 1441.77it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NDCG@20: 0.15591666161478393\n"
+      "MAP@5: 0.10710914454277286\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 565/565 [00:00<00:00, 1428.60it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAP@10: 0.11671864025846325\n"
      ]
     },
     {
@@ -1027,9 +1020,9 @@
     "    top_k_labels = ground_truth[top_k_indices]\n",
     "    num_ones = np.sum(ground_truth == 1)\n",
     "    hit = np.sum(top_k_labels > 0)\n",
-    "    return hit / num_ones # k\n",
+    "    return hit / min(num_ones, k) # k\n",
     "\n",
-    "def ap_at_k(k, ground_truth, pred, user_ids, edge_index):\n",
+    "def hit_at_k(k, ground_truth, pred, user_ids, edge_index):\n",
     "    precisions = []\n",
     "    for user_id in tqdm(user_ids, total=len(user_ids)):\n",
     "        mask = edge_index[0] == user_id\n",
@@ -1101,6 +1094,60 @@
     "        \n",
     "    return np.mean(ndcgs)\n",
     "\n",
+    "def average_precision_at_k(user_id, sorted_indices, ground_truth, k):\n",
+    "    \"\"\"\n",
+    "    Computes the average precision at k for a single user.\n",
+    "    \n",
+    "    Args:\n",
+    "    user_id: The user id.\n",
+    "    sorted_indices: Indices that would sort the predicted ratings.\n",
+    "    ground_truth: Actual ratings (binary) indicating whether an item is relevant or not.\n",
+    "    k: The number of recommendations to consider.\n",
+    "    \n",
+    "    Returns:\n",
+    "    The average precision at k for the given user.\n",
+    "    \"\"\"\n",
+    "    top_k_indices = sorted_indices[:k]\n",
+    "    top_k_labels = ground_truth[top_k_indices]\n",
+    "    \n",
+    "    relevant_indices = np.where(top_k_labels > 0)[0]\n",
+    "    num_relevant = len(relevant_indices)\n",
+    "    \n",
+    "    if num_relevant == 0:\n",
+    "        return 0\n",
+    "    \n",
+    "    score = 0.0\n",
+    "    for i in relevant_indices:\n",
+    "        prec_at_i = np.sum(top_k_labels[:i+1]) / (i + 1)\n",
+    "        score += prec_at_i\n",
+    "    \n",
+    "    return score / min(num_relevant, k)\n",
+    "\n",
+    "def mean_ap_at_k(k, ground_truth, pred, user_ids, edge_index):\n",
+    "    \"\"\"\n",
+    "    Computes the mean average precision at k.\n",
+    "    \n",
+    "    Args:\n",
+    "    k: The number of recommendations to consider.\n",
+    "    ground_truth: Actual ratings (binary) indicating whether an item is relevant or not.\n",
+    "    pred: Predicted ratings.\n",
+    "    \n",
+    "    Returns:\n",
+    "    The mean average precision at k over all users.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    average_precisions = []\n",
+    "    for user_id in tqdm(user_ids, total=len(user_ids)):\n",
+    "        mask = edge_index[0] == user_id\n",
+    "        filtered_pred = pred[mask]\n",
+    "        filtered_ground_truth = ground_truth[mask]\n",
+    "        sorted_indices = np.argsort(filtered_pred)[::-1]\n",
+    "        \n",
+    "        average_precisions.append(\n",
+    "            average_precision_at_k(user_id, sorted_indices, filtered_ground_truth, k)\n",
+    "        )\n",
+    "        \n",
+    "    return np.mean(average_precisions)\n",
     "\n",
     "def evaluate(k_values, test_data_prime, ground_truth, pred):\n",
     "    edge_index = test_data_prime['user', 'rates', 'item'].edge_label_index\n",
@@ -1108,12 +1155,15 @@
     "\n",
     "    for k in k_values:\n",
     "        ### HIT@K ###\n",
-    "        hit_at_k = ap_at_k(k, ground_truth, pred, user_ids, edge_index)\n",
-    "        print(f\"AP@{k}: {hit_at_k}\")\n",
+    "        hit_k = hit_at_k(k, ground_truth, pred, user_ids, edge_index)\n",
+    "        print(f\"HIT@{k}: {hit_k}\")\n",
     "    for k in k_values:\n",
     "        ### NDCG@K ###\n",
     "        ndcg_result = calculate_ndcg_at_k(k, ground_truth, pred, edge_index)\n",
     "        print(f\"NDCG@{k}: {ndcg_result}\")\n",
+    "    for k in k_values:\n",
+    "        map_at_k = mean_ap_at_k(k, ground_truth, pred, user_ids, edge_index)\n",
+    "        print(f\"MAP@{k}: {map_at_k}\")\n",
     "\n",
     "\n",
     "eval_loader = {\n",
@@ -1131,7 +1181,7 @@
     "    # },\n",
     "\n",
     "}\n",
-    "k_values = [1, 5, 10, 15, 20]\n",
+    "k_values = [1, 5, 10]\n",
     "evaluate(k_values, test_data_all2all, ground_truth=eval_loader[model_mode_eval]['ground_truth'], pred=eval_loader[model_mode_eval]['pred'])"
    ]
   },
